--- a/css/style.css
+++ b/css/style.css
@@ -947,6 +947,9 @@ caption {
   color: #454545;
   white-space: pre-line;
 }
+.bbs_detail .bbs-view-content strong {
+  font-size: inherit;
+}
 .bbs_detail .bbs-view-content img {
   width: 100%;
   height: auto;
@@ -2330,85 +2333,119 @@ caption {
     width: auto;
   }
 }
-.contact-ir {
-  text-align: left;
+.contact-ir .desc {
+  font-weight: 300;
+  font-size: 5.2777777778vw;
+  line-height: 8.0555555556vw;
+  text-align: center;
+  letter-spacing: -0.03em;
+  color: #0D0D0D;
 }
-.contact-ir .inner {
-  width: 86.6666666667vw;
-  height: 47.2222222222vw;
-  padding: 18.3333333333vw 5.5555555556vw 0;
-  background: url("/images/img_ir_contact.png") no-repeat 50% 50%;
+.contact-ir .mail-address {
+  position: relative;
+  margin-top: 5.5555555556vw;
+  padding-top: 7.5vw;
+}
+.contact-ir .mail-address::before, .contact-ir .mail-address::after {
+  content: "";
+  display: block;
+  position: absolute;
+}
+.contact-ir .mail-address::before {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 15.2777777778vw;
+  height: 15.2777777778vw;
+  background: url("/images/ico_mail.png") no-repeat 50% 50%;
   background-size: cover;
 }
-.contact-ir .inner .quotes {
-  margin: 0;
-  margin-bottom: 2.7777777778vw;
-  text-align: left;
+.contact-ir .mail-address::after {
+  bottom: -3.7944444444vw;
+  left: 11.0055555556vw;
+  width: 70vw;
+  height: 70vw;
+  background: url("/images/img_letter_mo.png") no-repeat 50% 50%;
+  background-size: cover;
 }
-.contact-ir .inner .desc {
-  font-size: 4.1666666667vw;
+.contact-ir .mail-address .inner {
+  padding: 13.3333333333vw 6.9444444444vw 55.2777777778vw;
+  background: rgba(243, 244, 246, 0.4);
+  border: 1px solid #E8E8E8;
+  text-align: center;
 }
-.contact-ir .ir-phone li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 17.2222222222vw;
-  border-bottom: 1px solid #E8E8E8;
-}
-.contact-ir .ir-phone li .tit {
+.contact-ir .mail-address .inner .tit {
   font-weight: 700;
   font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
   color: #08A2DC;
 }
-.contact-ir .ir-phone li .number a {
+.contact-ir .mail-address .inner .address {
+  margin-top: 1.1111111111vw;
   font-weight: 700;
-  font-size: 5.5555555556vw;
-  color: #00498C;
+  font-size: 5vw;
+  line-height: 8.3333333333vw;
+  color: #454545;
+}
+.contact-ir .mail-address .inner .desc {
+  margin-top: 6.6666666667vw;
+  padding-top: 6.6666666667vw;
+  border-top: 1px solid rgba(232, 232, 232, 0.8);
+  font-weight: 400;
+  font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
+  color: #777777;
 }
 
 @media all and (min-width: 961px) {
-  .contact-ir {
-    position: relative;
-  }
-  .contact-ir .inner {
-    width: 100%;
-    height: 500px;
-    padding: 135px 80px 0;
-  }
-  .contact-ir .inner .quotes {
-    margin: 0;
-    margin-bottom: 12px;
-    text-align: left;
-  }
-  .contact-ir .inner .desc {
-    font-weight: 300;
+  .contact-ir .desc {
     font-size: 24px;
+    line-height: 36px;
+    letter-spacing: -0.02em;
   }
-  .contact-ir .ir-phone {
-    display: flex;
-    position: absolute;
-    bottom: 70px;
-    left: 80px;
+  .contact-ir .mail-address {
+    margin-top: 30px;
+    padding-top: 32px;
   }
-  .contact-ir .ir-phone li {
-    display: block;
-    width: 280px;
-    height: 170px;
-    padding: 28px 0 0 36px;
-    border-bottom: none;
-    background: #FFFFFF;
+  .contact-ir .mail-address::before {
+    width: 65px;
+    height: 65px;
   }
-  .contact-ir .ir-phone li .tit {
-    display: block;
+  .contact-ir .mail-address::after {
+    top: -75.38px;
+    bottom: auto;
+    left: auto;
+    right: -34.66px;
+    width: 433.23px;
+    height: 433.23px;
+    background: url("/images/img_letter_pc.png") no-repeat 50% 50%;
+    background-size: cover;
+  }
+  .contact-ir .mail-address .inner {
+    padding: 63px 200px 31px;
+  }
+  .contact-ir .mail-address .inner .tit {
     font-size: 16px;
+    line-height: 26px;
   }
-  .contact-ir .ir-phone li .number a {
-    display: block;
-    margin-top: 48px;
-    font-size: 33px;
+  .contact-ir .mail-address .inner .address {
+    margin-top: 5px;
+    font-size: 20px;
+    line-height: 30px;
   }
-  .contact-ir .ir-phone li + li {
-    margin-left: 5px;
+  .contact-ir .mail-address .inner .desc {
+    margin-top: 55px;
+    padding-top: 30px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) {
+  .contact-ir .mail-address::after {
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30%;
+    height: 100%;
   }
 }
 .esg-level-wrap .esg-mark-wrap {
