--- a/css/main.scss
+++ b/css/main.scss
@@ -827,6 +827,7 @@ main {
     position: relative;
     //height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
+    overflow: hidden;
     .video-box {
       position: absolute;
       display: flex;
@@ -911,6 +912,7 @@ main {
     }
   }
   .news-room {
+    overflow: hidden;
     .news-top {
       padding:get-vw(80px) 0 get-vw(40px) get-vw(24px);
       background:rgba(243, 244, 246, 0.55) url("/images/bg_ak_main_mo.png") no-repeat 50% 50%;
@@ -1024,6 +1026,7 @@ main {
     padding:get-vw(110px) get-vw(24px) get-vw(24px);
     background: url("/images/bg_main_esg_mo.png") no-repeat 50% 50%;
     background-size: cover;
+    overflow: hidden;
     .caption{
       h2{
         font-weight:700;
